--- a/src/css/clash-display.css
+++ b/src/css/clash-display.css
@@ -17,7 +17,7 @@
 *
 */
 @font-face {
-  font-family: 'ClashDisplay-Extralight';
+  font-family: 'Clash Display';
   src: url('../fonts/ClashDisplay-Extralight.woff2') format('woff2'),
        url('../fonts/ClashDisplay-Extralight.woff') format('woff'),
        url('../fonts/ClashDisplay-Extralight.ttf') format('truetype');
@@ -26,7 +26,7 @@
   font-style: normal;
 }
 @font-face {
-  font-family: 'ClashDisplay-Light';
+  font-family: 'Clash Display';
   src: url('../fonts/ClashDisplay-Light.woff2') format('woff2'),
        url('../fonts/ClashDisplay-Light.woff') format('woff'),
        url('../fonts/ClashDisplay-Light.ttf') format('truetype');
@@ -35,7 +35,7 @@
   font-style: normal;
 }
 @font-face {
-  font-family: 'ClashDisplay-Regular';
+  font-family: 'Clash Display';
   src: url('../fonts/ClashDisplay-Regular.woff2') format('woff2'),
        url('../fonts/ClashDisplay-Regular.woff') format('woff'),
        url('../fonts/ClashDisplay-Regular.ttf') format('truetype');
@@ -44,7 +44,7 @@
   font-style: normal;
 }
 @font-face {
-  font-family: 'ClashDisplay-Medium';
+  font-family: 'Clash Display';
   src: url('../fonts/ClashDisplay-Medium.woff2') format('woff2'),
        url('../fonts/ClashDisplay-Medium.woff') format('woff'),
        url('../fonts/ClashDisplay-Medium.ttf') format('truetype');
@@ -53,7 +53,7 @@
   font-style: normal;
 }
 @font-face {
-  font-family: 'ClashDisplay-Semibold';
+  font-family: 'Clash Display';
   src: url('../fonts/ClashDisplay-Semibold.woff2') format('woff2'),
        url('../fonts/ClashDisplay-Semibold.woff') format('woff'),
        url('../fonts/ClashDisplay-Semibold.ttf') format('truetype');
@@ -62,7 +62,7 @@
   font-style: normal;
 }
 @font-face {
-  font-family: 'ClashDisplay-Bold';
+  font-family: 'Clash Display';
   src: url('../fonts/ClashDisplay-Bold.woff2') format('woff2'),
        url('../fonts/ClashDisplay-Bold.woff') format('woff'),
        url('../fonts/ClashDisplay-Bold.ttf') format('truetype');
@@ -79,7 +79,7 @@
 'wght' (range from 200.0 to 700.0
 */
 @font-face {
-  font-family: 'ClashDisplay-Variable';
+  font-family: 'Clash Display';
   src: url('../fonts/ClashDisplay-Variable.woff2') format('woff2'),
        url('../fonts/ClashDisplay-Variable.woff') format('woff'),
        url('../fonts/ClashDisplay-Variable.ttf') format('truetype');
